Update Firefox version in user agent manager

BUG: 415467
FIXED-IN: 22.08.02

Signed-off-by: Juraj Oravec <jurajoravec@mailo.com>